// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppView> Render with children 1`] = `
<div
  className="container"
>
  <div
    data-mock="MainMenu"
  />
  <p>
    <div
      data-mock="Button"
    >
      {
  "type": "button",
  "appearance": "light"
}
      <div
        data-mock="Icon"
      >
        {
  "name": "link"
}
      </div>
        Open third page programmatically
    </div>
  </p>
  <hr />
  Children
</div>
`;

exports[`<AppView> Simple render 1`] = `
<div
  className="container"
>
  <div
    data-mock="MainMenu"
  />
  <p>
    <div
      data-mock="Button"
    >
      {
  "type": "button",
  "appearance": "light"
}
      <div
        data-mock="Icon"
      >
        {
  "name": "link"
}
      </div>
        Open third page programmatically
    </div>
  </p>
  <hr />
</div>
`;
